--- a/standard_deviation/standard_deviation.html
+++ b/standard_deviation/standard_deviation.html
@@ -51,7 +51,7 @@
 		var controlpanel = displayPanel.append("div").attr("id","controlpanel");
 		
 		//instructional text
-		controlpanel.append("p").text("How close can you get to the target standard devation?").attr("class","paragraphText");
+		controlpanel.append("p").text("How close can you get to the target standard deviation?").attr("class","paragraphText");
 		controlpanel.append("p").text("Click the plot to add points and change the standard deviation.").attr("class","paragraphText");
 		
 		
