--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 		<a href="/standard_deviation/standard_deviation.html">Standard Deviation</a> 
 		<h2> Bivariate Statistics </h2>
 		<a href="/correlation_game2/correlationgame.html">Correlation</a> 
+		<h2> Regression </h2>
+		<a href="/linear_regression/linear_regression.html">Linear Regression</a> 
 		</div>
         <script>
 		</script>
