--- a/index.html
+++ b/index.html
@@ -2,19 +2,25 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>SPLASH</title>
+        <title>Statistics Applets</title>
 		<link type="text/css" rel="stylesheet" href="styling.css" />
     </head>
     <body>
 		<div id="container">
 		<h1> Statistics Applets </h1>
-		<h2> Univariate Statistics </h2>
-		<a href="/mean/mean.html">Mean</a> 
-		<a href="/standard_deviation/standard_deviation.html">Standard Deviation</a> 
-		<h2> Bivariate Statistics </h2>
-		<a href="/correlation_game2/correlationgame.html">Correlation</a> 
-		<h2> Regression </h2>
-		<a href="/linear_regression/linear_regression.html">Linear Regression</a> 
+			<div margin-bottom="30">
+				<h2> Univariate Statistics </h2>
+				<div class="innerdiv"> <a href="/mean/mean.html">Mean <br><img src="mean.png" width="120" height="120" border="1"/></a> </div>
+				<div class="innerdiv"> <a href="/standard_deviation/standard_deviation.html">Standard Deviation <br> <img src="sd.png" width="120" height="120" border="1"/> </a> </div>
+			</div>
+			<div margin-bottom="30">
+				<h2> Bivariate Statistics </h2>
+				<div class="innerdiv"><a href="/correlation_game2/correlationgame.html">Correlation <br> <img src="correlation.png" width="120" height="120" border="1"/></a> </div>
+			</div>
+			<div margin-bottom="30">
+				<h2> Regression </h2>
+				<a href="/linear_regression/linear_regression.html">Linear Regression <br> <img src="linear.png" width="120" height="120" border="1"/></a> 
+			</div>
 		</div>
         <script>
 		</script>
