--- a/standard_deviation/standard_deviation.html
+++ b/standard_deviation/standard_deviation.html
@@ -51,7 +51,7 @@
 		var controlpanel = displayPanel.append("div").attr("id","controlpanel");
 		
 		//instructional text
-		controlpanel.append("p").text("How close can you get to the target standard deviation?").attr("class","paragraphText");
+		controlpanel.append("p").text("How close can you get to the target standard devation?").attr("class","paragraphText");
 		controlpanel.append("p").text("Click the plot to add points and change the standard deviation.").attr("class","paragraphText");
 		
 		
@@ -126,7 +126,7 @@
 			var bar = svg.selectAll(".bar")
 				.data(data);
 				
-			var movesLeft = list0.selectAll(".moves").data([10-iter]);	
+			var movesLeft = list0.selectAll(".moves").data([21-iter]);	
 			
 			var statLines = svg.selectAll(".statLines").data(stats);
 			
@@ -239,7 +239,7 @@
 		}
 		
 		function mousedown() {
-			if (iter < 10) {
+			if (iter < 21) {
 				var point = xScale.invert(d3.mouse(this)[0]-margin.left);
 				if (Math.abs(point)<4){
 					values.push(point);
@@ -296,14 +296,55 @@
 			return samples;
 		}
 		
+		function rnormMixture(num_samples, mean1, mean2, sd1, sd2){
+			var samples = new Array();
+			for (var i = 0; i < num_samples; i++){
+				var selector = Math.floor(Math.random()*2);
+				samples.push(rnorm(1,[mean1,mean2][selector],[sd1,sd2][selector])[0]);
+			}
+			console.log(samples);
+			return samples;
+		}
+		
+		/*
+		Sample from skew-normal dist.
+		Accessed 6/17/2014
+		Adelchi Azzalini 
+		Dipartimento di Scienze Statistiche
+		Università di Padova 
+		http://azzalini.stat.unipd.it/SN/faq-r.html
+		*/
+		
+		function rSkewNorm(num_samples, location, scale, shape){
+			var correlation = (shape && shape / Math.abs(shape))*Math.sqrt(Math.pow(shape,2)/(1+Math.pow(shape,2)));
+			var func = d3.random.normal();
+			var b = Math.sqrt(1-Math.pow(correlation,2));
+			var samples = new Array();
+			for (var i = 0; i < num_samples; i++){
+				var mu0 = func();
+				var v = func();
+				var mu1 = correlation*mu0+b*v;
+				var z = mu1 * Math.pow(-1,+!mu0>=0)
+				samples.push(location+scale*z);
+			}
+			return samples;
+		}
+		
+		
 		function generateData(){
-			switch( Math.floor(Math.random()*2)){
+			switch( Math.floor(Math.random()*3)){
 				case 0:
-					return rnorm(15,0,1);
+					console.log("normal");
+					return rnorm(30,0,1);
 					break;
 				case 1:
-					return runif(15,-4,4);
-					break;					
+					console.log("uniform");
+					return runif(30,-4,4);
+					break;		
+				case 2:
+					console.log("skew-normal");
+					return rSkewNorm(30,0,1,[4,-4,5,-5,6,-6][Math.floor(Math.random()*6)]);
+					break;
 			}
 			
 		}
