--- a/linear_regression/linear_regression.html
+++ b/linear_regression/linear_regression.html
@@ -209,7 +209,7 @@
 			//EXIT STEP
 			points.exit().remove();
 			
-			svg.selectAll(".axis").data([]).exit().transition().duration(1200).style("fill-opacity",1e-6).remove();
+			svg.selectAll(".axis").data([]).exit().remove();
 			
 			residualLines.exit().remove();
 
