--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 		<div id="container">
 		<h1> Statistics Applets </h1>
 			<div margin-bottom="30">
-				<h2> Univariate Statistics </h2>
+				<h2> Univariate Graphics and Statistics </h2>
 				<div class="innerdiv"> <a href="/mean/mean.html">Mean <br><img src="mean.PNG" width="120" height="120" border="1"/></a> </div>
 				<div class="innerdiv"> <a href="/standard_deviation/standard_deviation.html">Standard Deviation <br> <img src="sd.PNG" width="120" height="120" border="1"/> </a> </div>
 			</div>
 			<div margin-bottom="30">
-				<h2> Bivariate Statistics </h2>
+				<h2> Bivariate Graphics and Statistics </h2>
 				<div class="innerdiv"><a href="/correlation_game2/correlationgame.html">Correlation <br> <img src="correlation.PNG" width="120" height="120" border="1"/></a> </div>
+				<div class="innerdiv"><a href="/mosaic_plot/mosaic_plot.html">Mosaic Plot <br> <img src="mosaic.PNG" width="120" height="120" border="1"/></a> </div>
 			</div>
 			<div margin-bottom="30">
 				<h2> Regression </h2>
