--- a/mosaic_plot/mosaic_plot.html
+++ b/mosaic_plot/mosaic_plot.html
@@ -111,7 +111,7 @@
 				updateChart([],data2, targetdata);
 			}
 			else if (Math.abs(data1[0].x - targetdata1[0].x) < 40){
-				displayText = [{display: "Amost...", color: "#FF9900"}];
+				displayText = [{display: "Almost...", color: "#FF9900"}];
 				updateDisplay(displayText);
 			}
 			else {
