--- a/mosaic_plot/mosaic_plot.html
+++ b/mosaic_plot/mosaic_plot.html
@@ -106,7 +106,7 @@
 			console.log(data1);
 			
 			if( Math.abs(data1[0].x - targetdata1[0].x) < 20){
-				displayText = [{display: "Correct! Now try representing the conditional distributions:", color: "green"}];
+				displayText = [{display: "Correct! Now try drawing the conditional distributions:", color: "green"}];
 				updateDisplay(displayText);
 				updateChart([],data2, targetdata);
 			}
