--- a/statapps/index.html
+++ b/statapps/index.html
@@ -25,13 +25,13 @@
 				heading: "One Variable",
 				children: [
 					{name: "Histogram", descr: "mean, median, SD", link: "histogram/histogram.html", image: "histogramImage.PNG" },
-					{name: "Histogram", descr: "mean, median, SD", link: "histogram/histogram.html", image: "histogramImage300x200.PNG" }
+					{name: "Histogram", descr: "mean, median, SD", link: "histogram/histogram.html", image: "histogramImage300x200.png" }
 				]
 			},
 			{
 				heading: "Two Variables",
 				children: [
-					{name: "Mosaic Plot", descr: "two categorical", link: "mosaic_plot/mosaic_plot.html", image: "mosaic300x200.PNG" }
+					{name: "Mosaic Plot", descr: "two categorical", link: "mosaic_plot/mosaic_plot.html", image: "mosaic300x200.png" }
 				]
 			}
 		]
