--- a/statapps/index.html
+++ b/statapps/index.html
@@ -25,7 +25,7 @@
 				heading: "One Variable",
 				children: [
 					{name: "Histogram", descr: "mean, median, SD", link: "histogram/histogram.html", image: "histogramImage.PNG" },
-					{name: "Histogram", descr: "mean, median, SD", link: "histogram/histogram.html", image: "histogramImage300x200.png" }
+					{name: "Boxplot", descr: "median, quartiles, outliers", link: "boxplot/boxplot.html", image: "boxplot300x200.png" }
 				]
 			},
 			{
@@ -103,8 +103,17 @@
 			d3.select(this).selectAll("text").attr("opacity", 1);
 		}
 
-
+		/*
+		body.append("html").text(
+					"<p> Applets by Mao Hu, built using <a href=http://d3js.org/> D3.js </a>.</p>
+		<p> Part of the <a href=https://bassconnections.duke.edu/project-teams/creating-online-education-k-12-teachers-probability-and-statistics-common-core%E2%80%A8> 
+		Creating Online Education for K-12 Teachers of the 
+		Probability and Statistics Common Core  </a> Bass Connections project team. </p>" 
+		)
+		*/
+		
 		</script>
-	
+
+
     </body>
 </html>     
