--- a/statapps/index.html
+++ b/statapps/index.html
@@ -25,7 +25,7 @@
 				heading: "One Variable",
 				children: [
 					{name: "Histogram", descr: "mean, median, SD", link: "histogram/histogram.html", image: "histogramImage.PNG" },
-					{name: "Boxplot", descr: "median, quartiles, outliers", link: "boxplot/boxplot.html", image: "boxplot300x200.png" }
+					{name: "Boxplot", descr: "quartiles, outliers", link: "boxplot/boxplot.html", image: "boxplot300x200.png" }
 				]
 			},
 			{
@@ -41,7 +41,7 @@
 				heading: "Association",
 				children: [
 					{name: "Correlation", descr: "correlation game", link: "correlation_game/correlationgame.html", image: "correlation300x200.png" },
-					{name: "Regression", descr: "Residuals", link: "linear_regression/linear_regression.html", image: "linear300x200.png" }
+					{name: "Regression", descr: "residuals", link: "linear_regression/linear_regression.html", image: "linear300x200.png" }
 				]
 			}
 		]
