changed spelling of box plot

--- a/statapps/boxplot/boxplot.html
+++ b/statapps/boxplot/boxplot.html
@@ -16,7 +16,7 @@
 		var body = d3.select("body").append("div").attr("id","mainbody");
 		
 		//title
-		body.append("h1").attr("id","heading").text("Boxplots");
+		body.append("h1").attr("id","heading").text("Box Plot");
 		
 		//define margins and size of chart
 		var margin = {top: 10, right: 10, bottom: 20, left: 10},
