--- a/statapps/index.html
+++ b/statapps/index.html
@@ -25,7 +25,7 @@
 				heading: "One Variable",
 				children: [
 					{name: "Histogram", descr: "mean, median, SD", link: "histogram/histogram.html", image: "histogramImage.PNG" },
-					{name: "Boxplot", descr: "quartiles, outliers", link: "boxplot/boxplot.html", image: "boxplot300x200.png" }
+					{name: "Box Plot", descr: "quartiles, outliers", link: "boxplot/boxplot.html", image: "boxplot300x200.png" }
 				]
 			},
 			{
