--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
 		<div id="container">
 		<h1> Statistics Applets </h1>
+			<a href="http://mih5.github.io/statapps/"> New webpage </a>
 			<div margin-bottom="30">
 				<h2> Univariate Graphics and Statistics </h2>
 				<div class="innerdiv"> <a href="/mean/mean.html">Mean <br><img src="mean.PNG" width="120" height="120" border="1"/></a> </div>
