conditional probability tree

--- a/statapps/index.html
+++ b/statapps/index.html
@@ -30,7 +30,7 @@
 			},
 			{
 				heading: "Probability",
-				children: []
+				children: [{name: "Tree", descr: "conditional probability", link: "cond_prob/conditional_prob_tree.html", image: "cond_prob300x200.png"}]
 			}
 		]
 		
