--- a/statapps/boxplot/boxplot.html
+++ b/statapps/boxplot/boxplot.html
@@ -97,8 +97,8 @@
 		citation.append("text")
 				.text(" examples.");
 		
-		var buttonNames = [ "Normal (SD 1)",
-			"Normal (SD 0.5)",
+		var buttonNames = [ "Normal (0, 1)",
+			"Normal (0, 0.5)",
 			"Uniform",
 			"Bimodal",
 			"Skewed right",
