--- a/statapps/histogram/histogram.html
+++ b/statapps/histogram/histogram.html
@@ -66,8 +66,8 @@
 		
 		var plotType = 0;
 		
-		var buttonNames = [ "Normal (SD 1)",
-			"Normal (SD 0.5)",
+		var buttonNames = [ "Normal (0, 1)",
+			"Normal (0, 0.5)",
 			"Uniform",
 			"Bimodal",
 			"Skewed right",
