--- a/statapps/boxplot/boxplot.html
+++ b/statapps/boxplot/boxplot.html
@@ -80,7 +80,7 @@
 		//instructional text
 		controlpanel.append("p").text("Select two distributions to sample and click 'Restart.'").attr("class","paragraphText");
 		
-		statPanel.append("p").text("Use the menus to display different distributions.  How do box plots represent each distribution?").attr("class","paragraphText");
+		statPanel.append("p").text("How do box plots represent each distribution?").attr("class","paragraphText");
 		
 		var buttonNames = [ "Normal (0, 1)",
 			"Normal (0, 0.5)",
@@ -256,7 +256,7 @@
 		
 		</script>
 		
-			<div class="mainbody">
+		<div class="mainbody">
 			<div id="infoText">
 
 				<p> Adapted from Mike Bostock's <a href="http://bl.ocks.org/mbostock/4061502">Box Plot</a> and 
