shortened text for mosaic plot

--- a/statapps/mosaic_plot/mosaic_plot.html
+++ b/statapps/mosaic_plot/mosaic_plot.html
@@ -57,7 +57,7 @@
 		var controlpanel = displayPanel.append("div").attr("id","controlpanel");
 		
 		//instructional text
-		controlpanel.append("p").text("Drag the rectangles to reflect the marginal distributions of X and X' and the conditional distributions of Y and Y' given X and X' described in the table.").attr("class","paragraphText");
+		controlpanel.append("p").text("Drag the rectangles to reflect the data in the table.").attr("class","paragraphText");
 		
 		//reset button
 		controlpanel.append("input")
