--- a/statapps/mosaic_plot/mosaic_plot.html
+++ b/statapps/mosaic_plot/mosaic_plot.html
@@ -51,7 +51,7 @@
 		
 		var statPanel = displayPanel.append("div").attr("id","statdiv");
 					
-		statPanel.append("p").text("Data:").attr("class","paragraphText");
+		//statPanel.append("p").text("Data:").attr("class","paragraphText");
 		var table = statPanel.append("table").attr("id","dataTable");
 		
 		var controlpanel = displayPanel.append("div").attr("id","controlpanel");
