--- a/statapps/histogram/histogram.html
+++ b/statapps/histogram/histogram.html
@@ -83,7 +83,7 @@
 			.attr("onclick", "restart()");
 			
 		controlpanel.append("p").text("Discussion Question").attr("class","paragraphText2");
-		controlpanel.append("p").text("How do the mean, median, and standard deviation (SD) change when points are added?  Are these statistics robust to extreme points?").attr("class","paragraphText");
+		controlpanel.append("p").text("How do the mean, median, and standard deviation (SD) change when points are added?  Which statistics are robust to extreme points?").attr("class","paragraphText");
 		
 		
 		//initialize scales for chart
