updated boxplot text

--- a/statapps/boxplot/boxplot.html
+++ b/statapps/boxplot/boxplot.html
@@ -79,7 +79,7 @@
 		
 		//instructional text
 		controlpanel.append("p").text("Instructions").attr("class","paragraphText2");
-		controlpanel.append("p").text("Select two distributions to sample and click 'Restart.'").attr("class","paragraphText");
+		controlpanel.append("p").text("Select two distributions to sample and click 'Restart.'  Mouse over the plots to shade percentiles of the distribution.").attr("class","paragraphText");
 		
 		//statPanel.append("p").text("How do box plots represent each distribution?").attr("class","paragraphText");
 		
