--- a/statapps/boxplot/boxplot.html
+++ b/statapps/boxplot/boxplot.html
@@ -87,8 +87,8 @@
 			"Normal (0, 0.5)",
 			"Uniform",
 			"Bimodal",
-			"Skewed right",
-			"Skewed left"]
+			"Right-skewed",
+			"Left-skewed"]
 		
 		function change1() {
 			plotType1 = selection1.property('selectedIndex');
