--- a/statapps/histogram/histogram.html
+++ b/statapps/histogram/histogram.html
@@ -63,8 +63,8 @@
 			"Normal (0, 0.5)",
 			"Uniform",
 			"Bimodal",
-			"Skewed right",
-			"Skewed left",
+			"Right-skewed",
+			"Left-skewed",
 			"Build your own!"]
 		
 		function change() {
